🍱🤗 Checkpoint ./styles.css:69468852/761 ./default/reset.css:69468852/3817 ./default/custom.css:69468852/6119 ./index.html:69468852/67

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,27 @@
+body {
+  color: white;
+  font-family: 'Arial Narrow';
+}
+
 header {
   position: fixed;
-  background
+  width: 100%;
+}
+
+nav {
+  padding: 2vw;
+}
+
+ol {
+  background-color: black;
+}
+
+li {
+  padding: 1vw 1vw 0 1vw;
+}
+
+li:last-child {
+  padding-bottom: 1vw;
 }
 
 section {
@@ -11,4 +32,8 @@ section {
 
 section:nth-child(2n) {
   background-color: grey;
+}
+
+li:hover {
+  opacity: .25;
 }
