🏁🎠 Checkpoint ./styles.css:69468852/379 ./default/custom.css:69468852/134 ./README.md:69468852/31 ./index.html:69468852/135

--- a/default/custom.css
+++ b/default/custom.css
@@ -7,11 +7,11 @@
  }
  li:before {
    margin-right: 1vw;
-   content: counter(item);
+   content: ')' counter(item) ')';
    border-radius: 100%;
-   border: white .2vw solid;
+/*    border: white dashed;
    color: white;
-   width: 1.2em;
+   width: 1.2em; */
    text-align: center;
    display: inline-block;
  }
