⛰🚐 Checkpoint ./default/custom.css:69468852/13 ./index.html:69468852/32 ./styles.css:69468852/1160

--- a/default/custom.css
+++ b/default/custom.css
@@ -6,8 +6,8 @@
    counter-increment: item;
  }
  li:before {
-   margin-right: 1vw;
-   content: ')' counter(item) ')';
+   margin-right: .8em;
+   content: '(' counter(item) ')';
    border-radius: 100%;
 /*    border: white dashed;
    color: white;
