--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@ body {
 }
 
 header {
-  position: absolute;
+  position: sticky;
   top: 0;
   left: 0;
   width: 30vw;
@@ -29,14 +29,14 @@ nav {
 }
 
 section {
-/*   background-color: lightgrey; */
   min-height: 100vh;
-  border-left: 
+  border-left: solid black var(--border);
+  border-bottom: solid black var(--border);
 }
 
-/* section:nth-child(2n) {
-  background-color: grey;
-} */
+section:nth-child(2n + 1) {
+  background-color: #f0f0f0;
+}
 
 li:hover {
   opacity: .5;
