--- a/default/custom.css
+++ b/default/custom.css
@@ -11,6 +11,7 @@ body {
   font-family: 'Arial Narrow';
   line-height: 108%;
   font-size: 1.2vw;
+  letter-spacing: .01em;
   display: flex;
 }
 
@@ -18,6 +19,8 @@ header {
   position: fixed;
   top: 0;
   left: 0;
+  min-height: 100vh;
+  border-right: solid black var(--border);
   width: 30vw;
 }
 
@@ -26,6 +29,8 @@ main {
   top: 0;
   right: 0;
   width: 70vw;
+  scroll-snap-points-y: repeat(calc(100vh + var(--border)));
+  scroll-snap-type: y mandatory;
 }
 
 nav {
@@ -34,10 +39,13 @@ nav {
 
 section {
   min-height: calc(100vh + var(--border));
-  border-left: solid black var(--border);
-  border-bottom: solid black var(--border);
   padding-top: calc(var(--border) * -1);
   margin-top: var(--border);
+  scroll-snap-align: start;
+}
+
+section:not(:last-child) {
+  border-bottom: solid black var(--border);
 }
 
 ol {
