--- a/styles.css
+++ b/styles.css
@@ -3,10 +3,16 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   padding: .5vw;
 }
 
-#trick-1 .container {
-  height: 100vh;
+#trick-2 .container {
+  height: 100%;
+}
+
+.container .box {
+  width: 15vw;
+  height: 15vw;
+  border: black solid var(--border);
 }
