👼😼 Checkpoint ./styles.css:69468852/29 ./script.js:69468852/3191 ./default/custom.css:69468852/139 ./index.html:69468852/43

--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,8 @@
 }
 
 .container .box {
-  width: 15vw;
-  height: 15vw;
+  width: 20vw;
+  height: 20vw;
   border: black solid var(--border);
+  padding: .5vw;
 }
