--- a/default/custom.css
+++ b/default/custom.css
@@ -22,6 +22,8 @@ header {
   min-height: 100vh;
   border-right: solid black var(--border);
   width: 30vw;
+  display: flex;
+  align-items: space-between;
 }
 
 main {
