--- a/styles.css
+++ b/styles.css
@@ -1,19 +1,8 @@
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 100%;
-  height: 100vh;
-  padding: .5vw;
+#exercise-1 p:hover {
+  color: red;
 }
 
-#trick-2 .container {
-  height: 100%;
-}
-
-.container .box {
-  width: 20vw;
-  height: 20vw;
-  border: black solid var(--border);
-  padding: .5vw;
+#exercise-3 .box:hover {
+  transform: rotate(180deg);
+  transition: 2s ease;
 }
