🐞🐛 Checkpoint ./index.html:69468852/560 ./styles.css:69468852/373 ./default/custom.css:69468852/198 ./script.js:69468852/293

--- a/default/custom.css
+++ b/default/custom.css
@@ -1,6 +1,6 @@
 :root {
   --border: .065vw;
-  --base: 2vw;
+  --base: 1.8vw;
   --padding: 1vw;
 }
 
@@ -87,8 +87,18 @@ img {
   cursor: pointer;
 }
 
-#trick-2 .container {
+#exercise-2 .container {
   height: 100%;
+}
+
+#exercise-4 .container .box {
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
+
+#exercise-7 {
+  padding: var(--padding);
 }
 
 .container .box {
