--- a/default/default.css
+++ b/default/default.css
@@ -110,7 +110,7 @@ meter {
 
 :root {
   --border: .065vw;
-  --border: .1vw;
+  --border: .08vw;
   --base: 1.4vw;
   --padding: 1vw;
 }
@@ -147,10 +147,15 @@ main {
   top: 0;
   right: 0;
   width: 70vw;
+  display: flex;
+  flex-wrap: wrap;
+  
 }
 
 section {
-  min-height: 100vh;
+  min-height: calc(100vh / 3);
+  width: calc(70vw / 3);
+  padding: var(--padding);
 }
 
 ol {
@@ -197,8 +202,7 @@ img {
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100vh;
-  padding: .5vw;
+  height: 100%;
 }
 
 .container > * {
@@ -206,18 +210,14 @@ img {
 }
 
 .container .box {
-  width: 20vw;
-  height: 20vw;
+  width: calc((70vw / 3) - (var(--padding) * 2));
+  height: calc((70vw / 3) - (var(--padding) * 2));
   border: black solid var(--border);
-  padding: .5vw;
+  padding: var(--padding);
 }
 
 #exercise-1 p:hover {
   color: red;
-}
-
-#exercise-2 .container {
-  height: 100%;
 }
 
 #exercise-3 .box:hover {
@@ -238,10 +238,6 @@ img {
 
 #exercise-6 .box:hover {
   cursor: crosshair;
-}
-
-#exercise-7 {
-  padding: var(--padding);
 }
 
 @media (max-width: 888px) {
