--- a/default/default.css
+++ b/default/default.css
@@ -180,6 +180,12 @@ ol li:before {
  transform: scale(.88);
 }
 
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
 li:hover,
 a:hover,
 button:hover {
@@ -187,10 +193,8 @@ button:hover {
   cursor: pointer;
 }
 
-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+.container > * {
+  cursor: pointer;
 }
 
 .title {
@@ -205,25 +209,30 @@ img {
   height: 100%;
 }
 
-.container > * {
-  cursor: pointer;
-}
-
-.container .box {
+.box {
   width: calc((70vw / 3) - (var(--padding) * 2));
   height: calc((70vw / 3) - (var(--padding) * 2));
   border: black solid var(--border);
   padding: var(--padding);
-  transition: 1s ease;
+  transition: all 2s ease;
 }
+
+/* .box.fast {
+  transition: all .5s ease;
+} */
 
 #exercise-1:hover {
   color: red;
+  transition: all .5s ease;
 }
 
 #exercise-2 .box {
-  transform: blur(20px);
-  transition: 1s ease;
+  filter: blur(0);
+}
+
+#exercise-2 .box:hover p {
+  filter: blur(10px);
+  transition: all .5s ease;
 }
 
 #exercise-3 .box:hover {
@@ -237,8 +246,7 @@ img {
 }
 
 #exercise-4 .box {
-  border-radius: 30px;
-  transition: 2s ease;
+  border-radius: 50px;
 }
 
 #exercise-6 .box:hover {
