--- a/default/default.css
+++ b/default/default.css
@@ -108,13 +108,18 @@ meter {
     display: none;
 }
 
+
+/* default styles start here */
+
 :root {
-  --border: .065vw;
+/*   --border: .065vw; */
   --border: .08vw;
   --base: 1.4vw;
   --padding: 1vw;
   --header-width: 30vw;
   --main-width: calc(100vw - var(--header-width));
+  --main-columns: 3;
+  --main-gutter: calc(var(--main-columns) - 1);
 }
 
 html {
@@ -159,9 +164,9 @@ header:not(.title) {
 }
 
 section {
-  height: calc(var(--main-width) / 3);
-  width: calc(var(--main-width) / 3);
-  padding: var(--padding);
+  height: calc(var(--main-width) / var(--main-columns));
+  width: calc(var(--main-width) / var(--main-columns));
+  padding: var(--padding) var(--padding) 0 var(--padding);
 }
 
 ol {
@@ -228,8 +233,8 @@ button:hover {
 }
 
 .box {
-  width: calc((var(--main-width) / 3) - (var(--padding) * 2));
-  height: calc((var(--main-width) / 3) - (var(--padding) * 2));
+  width: 100%;
+  height: 100%;
   border: black solid var(--border);
   padding: var(--padding);
 }
@@ -277,6 +282,7 @@ button:hover {
     --padding: 1.8vw;
     --base: 1.8vw;
     --header-width: 36vw;
+    --main-columns: 2;
   }
   header {
     width: var(--header-width);
