--- a/default/default.css
+++ b/default/default.css
@@ -1,130 +1,11 @@
-/***
-    The new CSS reset - version 1.11.2 (last updated 15.11.2023)
-    GitHub page: https://github.com/elad2412/the-new-css-reset
-***/
-
-/*
-    Remove all the styles of the "User-Agent-Stylesheet", except for the 'display' property
-    - The "symbol *" part is to solve Firefox SVG sprite bug
-    - The "html" element is excluded, otherwise a bug in Chrome breaks the CSS hyphens property (https://github.com/elad2412/the-new-css-reset/issues/36)
- */
-*:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol
-      *)) {
-  all: unset;
-  display: revert;
-}
-
-/* Preferred box-sizing value */
-*,
-*::before,
-*::after {
-  box-sizing: border-box;
-}
-
-/* Fix mobile Safari increase font-size on landscape mode */
-html {
-  -moz-text-size-adjust: none;
-  -webkit-text-size-adjust: none;
-  text-size-adjust: none;
-}
-
-/* Reapply the pointer cursor for anchor tags */
-a,
-button {
-  cursor: revert;
-}
-
-/* Remove list styles (bullets/numbers) */
-ol,
-ul,
-menu,
-summary {
-  list-style: none;
-}
-
-/* For images to not be able to exceed their container */
-img {
-  max-inline-size: 100%;
-  max-block-size: 100%;
-}
-
-/* removes spacing between cells in tables */
-table {
-  border-collapse: collapse;
-}
-
-/* Safari - solving issue when using user-select:none on the <body> text input doesn't working */
-input,
-textarea {
-  -webkit-user-select: auto;
-}
-
-/* revert the 'white-space' property for textarea elements on Safari */
-textarea {
-  white-space: revert;
-}
-
-/* minimum style to allow to style meter element */
-meter {
-  -webkit-appearance: revert;
-  appearance: revert;
-}
-
-/* preformatted text - use only for this feature */
-:where(pre) {
-  all: revert;
-  box-sizing: border-box;
-}
-
-/* reset default text opacity of input placeholder */
-::placeholder {
-  color: unset;
-}
-
-/* fix the feature of 'hidden' attribute.
-   display:revert; revert to element instead of attribute */
-:where([hidden]) {
-  display: none;
-}
-
-/* revert for bug in Chromium browsers
-   - fix for the content editable attribute will work properly.
-   - webkit-user-select: auto; added for Safari in case of using user-select:none on wrapper element*/
-:where([contenteditable]:not([contenteditable="false"])) {
-  -moz-user-modify: read-write;
-  -webkit-user-modify: read-write;
-  overflow-wrap: break-word;
-  -webkit-line-break: after-white-space;
-  -webkit-user-select: auto;
-}
-
-/* apply back the draggable feature - exist only in Chromium and Safari */
-:where([draggable="true"]) {
-  -webkit-user-drag: element;
-}
-
-/* Revert Modal native behavior */
-:where(dialog:modal) {
-  all: revert;
-  box-sizing: border-box;
-}
-
-/* Remove details summary webkit styles */
-::-webkit-details-marker {
-  display: none;
-}
-
 /* default styles start here */
-
 :root {
-  /*   --border: .065vw; */
   --border: 0.08vw;
   --base: 1.4vw;
   --padding: 1vw;
   --header-width: 30vw;
   --main-width: calc(100vw - var(--header-width));
   --main-columns: 3;
-  --main-gutter: calc(var(--main-columns) - 1);
 }
 
 html {
@@ -161,7 +42,6 @@ main {
   width: var(--main-width);
   display: flex;
   flex-wrap: wrap;
-  /*   font-size: calc(var(--base) * .65); */
   padding: 0 var(--padding) var(--padding) 0;
 }
 
@@ -188,7 +68,7 @@ ol li:before {
   margin-right: 0.2em;
   content: counter(item);
   border-radius: 100%;
-  border: black solid calc((var(--border) / 0.88) * 1.12);
+  border: black solid 0.1vw;  /* Simplified border width */
   color: black;
   width: 1.2em;
   height: 1.2em;
@@ -249,10 +129,6 @@ button:hover {
   background-color: yellow;
 }
 
-#exercise-2 .box {
-  filter: blur(0);
-}
-
 #exercise-2 .box:hover p {
   filter: blur(10px);
   transition: all 0.5s ease;
@@ -295,18 +171,13 @@ button:hover {
     --header-width: 36vw;
     --main-columns: 2;
   }
-  header {
-    width: var(--header-width);
-  }
 }
+
 @media (max-width: 480px) {
   :root {
     --padding: 3vw;
     --base: 3vw;
     --header-width: 44vw;
     --main-columns: 1;
-  }
-  header {
-    width: var(--header-width);
   }
 }
