--- a/default/default.css
+++ b/default/default.css
@@ -14,7 +14,7 @@ html {
 
 body {
   color: black;
-  font-family: "Arial";
+  font-family: Arial, sans-serif;
   line-height: 108%;
   font-size: var(--base);
   letter-spacing: 0.01em;
@@ -46,7 +46,7 @@ main {
 }
 
 header:not(.title) {
-  font-family: "Arial Narrow";
+  font-family: 'Arial Narrow', Arial, sans-serif;
 }
 
 section {
@@ -103,7 +103,8 @@ button:hover {
 
 .title {
   text-transform: uppercase;
-  font-family: "Arial Black";
+  font-family: 'Arial Black', 'Arial Bold', sans-serif;
+  font-weight: 800;
 }
 
 .colour {
