🏌🐿 Checkpoint ./examples/index.html:69468852/54 ./default/default.css:69468852/79

--- a/default/default.css
+++ b/default/default.css
@@ -165,6 +165,10 @@ button:hover {
   cursor: progress;
 }
 
+#exercise07 .box:hover {
+  transform: scale(1.5);
+}
+
 @media (max-width: 888px) {
   :root {
     --padding: 1.8vw;
