🎁⭐️ Checkpoint ./examples/index.html:69468852/88 ./styles.css:69468852/168 ./index.html:69468852/18

--- a/styles.css
+++ b/styles.css
@@ -3,3 +3,12 @@
 body {
 
 }
+
+#exercise-1 .box:hover {
+  background-color: blue;
+  transform: scale(.5);
+}
+
+.box {
+  background-color: yellow;
+}
