🎖🐷 Checkpoint ./examples/index.html:69468852/1689 ./default/default.js:69468852/832 ./default/default.css:69468852/43

--- a/default/default.css
+++ b/default/default.css
@@ -126,6 +126,10 @@ button:hover {
   padding: var(--padding);
 }
 
+.focus {
+  transform: scale(1.5);
+}
+
 #example-1 .box:hover {
   background-color: yellow;
 }
